assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Lobster&display=swap');

/* ---------------------------------- Code Credit to https://stackoverflow.com/questions/6805482/css3-transition-animation-on-load/12638711#12638711 */
@keyframes slideInFromLeft {
    0% {
        transform: translateX(-100%);
    }

    100% {
        transform: translateX(0);
    }
}

/* ---------------------------------- End Credit */

/* ---------------------------------- General Stylings / Overriding Bootstrap Styles */
html {
    scroll-behavior: smooth;
}

body {
    background-color: #1d1d1b;
    line-height: normal;
}

* {
    margin: 0;
    padding: 0;
    border: none;
    box-sizing: border-box;
}

a {
    text-decoration: none;
    color: #ffffff;
}

a:hover {
    color: #c11734;
    text-decoration: none;
}

ul {
    margin: 0;
    padding: 0;
    border: 0;
}

.hidden {
    display: none;
}

/* ---------------------------------- Header */
.header {
    background-color: #1d1d1b;
    height: 200px;
    width: 100%;
}

.logo {
    height: 200px;
    width: 200px;
    display: block;
    margin: 0 auto;
}

.instagram-icon {
    width: 50px;
    height: 50px;
    border-radius: 50%;
    position: absolute;
    left: 30px;
    top: 30px;
    background-color: #ffffff;
}

.instagram-icon a {
    font-size: 35px;
    color: #1d1d1b;
    position: absolute;
    left: 10px;
    top: 5px;
}

.instagram-msg {
    font-family: Lobster, sans-serif;
    color: #ffffff;
    position: absolute;
    left: 90px;
    top: 45px;
}

/* ---------------------------------- Divider */
.divider {
    background-color: #c11734;
    width: 100%;
    height: 2px;
}

/* ----------------------------------  Hero Image */
.hero-image {
    background: url('../images/hero-img.jpg') no-repeat center center;
    background-size: cover;
    width: 100%;
    height: 550px;
    z-index: -1;
    display: flex;
    background-attachment: fixed;
}

/* ---------------------------------- Navigation Bar */
#navbar {
    font-family: Lobster, sans-serif;
    font-size: 25px;
    position: sticky;
    top: 0;
    background-color: rgba(0, 0, 0, .7);
    width: 100%;
    height: 80px;
    text-align: center;
    z-index: 1;
    list-style-type: none;
}

#navbar li {
    line-height: 75px;
    width: 16.6%;
    float: left;
}

#navbar a {
    margin: 0 auto;
    color: #FFFFFF;
    text-decoration: none;
}

#navbar a:hover {
    color: #c11734;
    text-decoration: none;
}

/* ---------------------------------- Code Credit to https://github.com/IanLunn/Hover */
/* ---------------------------------- Icon Fade */
.hvr-icon-fade {
    display: inline-block;
    vertical-align: middle;
    -webkit-transform: perspective(1px) translateZ(0);
    transform: perspective(1px) translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
}

.hvr-icon-fade .hvr-icon {
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
    -webkit-transition-duration: 0.5s;
    transition-duration: 0.5s;
    -webkit-transition-property: color;
    transition-property: color;
}

.hvr-icon-fade:hover .hvr-icon,
.hvr-icon-fade:focus .hvr-icon,
.hvr-icon-fade:active .hvr-icon {
    color: #c11734;
}

/* ---------------------------------- Icon Wobble Vertical */
@-webkit-keyframes hvr-icon-wobble-vertical {
    16.65% {
        -webkit-transform: translateY(6px);
        transform: translateY(6px);
    }

    33.3% {
        -webkit-transform: translateY(-5px);
        transform: translateY(-5px);
    }

    49.95% {
        -webkit-transform: translateY(4px);
        transform: translateY(4px);
    }

    66.6% {
        -webkit-transform: translateY(-2px);
        transform: translateY(-2px);
    }

    83.25% {
        -webkit-transform: translateY(1px);
        transform: translateY(1px);
    }

    100% {
        -webkit-transform: translateY(0);
        transform: translateY(0);
    }
}

@keyframes hvr-icon-wobble-vertical {
    16.65% {
        -webkit-transform: translateY(6px);
        transform: translateY(6px);
    }

    33.3% {
        -webkit-transform: translateY(-5px);
        transform: translateY(-5px);
    }

    49.95% {
        -webkit-transform: translateY(4px);
        transform: translateY(4px);
    }

    66.6% {
        -webkit-transform: translateY(-2px);
        transform: translateY(-2px);
    }

    83.25% {
        -webkit-transform: translateY(1px);
        transform: translateY(1px);
    }

    100% {
        -webkit-transform: translateY(0);
        transform: translateY(0);
    }
}

.hvr-icon-wobble-vertical {
    display: inline-block;
    vertical-align: middle;
    -webkit-transform: perspective(1px) translateZ(0);
    transform: perspective(1px) translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
}

.hvr-icon-wobble-vertical .hvr-icon {
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
}

.hvr-icon-wobble-vertical:hover .hvr-icon,
.hvr-icon-wobble-vertical:focus .hvr-icon,
.hvr-icon-wobble-vertical:active .hvr-icon {
    -webkit-animation-name: hvr-icon-wobble-vertical;
    animation-name: hvr-icon-wobble-vertical;
    -webkit-animation-duration: 1s;
    animation-duration: 1s;
    -webkit-animation-timing-function: ease-in-out;
    animation-timing-function: ease-in-out;
    -webkit-animation-iteration-count: 1;
    animation-iteration-count: 1;
}

/* ---------------------------------- Icon Rotate */
.hvr-icon-rotate {
    display: inline-block;
    vertical-align: middle;
    -webkit-transform: perspective(1px) translateZ(0);
    transform: perspective(1px) translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
}

.hvr-icon-rotate .hvr-icon {
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
    -webkit-transition-property: transform;
    transition-property: transform;
    -webkit-transition-timing-function: ease-out;
    transition-timing-function: ease-out;
}

.hvr-icon-rotate:hover .hvr-icon,
.hvr-icon-rotate:focus .hvr-icon,
.hvr-icon-rotate:active .hvr-icon {
    -webkit-transform: rotate(20deg);
    transform: rotate(20deg);
}

/* ---------------------------------- End Credit */

/* ---------------------------------- Welcome Message */
#welcome-msg {
    display: block;
    margin-left: 550px;
    margin-top: 38px;
    height: 400px;
    width: 600px;
    border-radius: 8%;
    background-color: rgba(0, 0, 0, .7);
    animation: 1s ease-out 0s 1 slideInFromLeft;
}

#welcome-msg h1 {
    font-family: Lobster, sans-serif;
    font-size: 40px;
    text-align: left;
    color: #ffffff;
    margin: 30px;
}

#welcome-msg p {
    font-family: Comfortaa, sans-serif;
    font-size: 20px;
    text-align: left;
    color: #ffffff;
    margin: 25px
}

/* ----------------------------------  Our Story */
#our-story {
    width: 100%;
    height: 600px;
}

.story {
    width: 45%;
    height: 500px;
    background-color: rgba(0, 0, 0, .7);
    border: 1px solid #000;
    margin: 50px 0;
    border-radius: 5%;
    position: absolute;
}

.story-p {
    left: 65px;
}

section h1 {
    font-family: Lobster, sans-serif;
    font-size: 40px;
    text-align: center;
    color: #ffffff;
    margin: 20px 0;
}

.story-p p {
    color: #ffffff;
    font-family: Comfortaa, sans-serif;
    font-size: 18px;
    margin: 30px;
}

.story-img {
    background: url('../images/jars.jpg') no-repeat center center;
    background-size: cover;
    right: 65px;
    height: 300px;
    width: 40%;
    margin-top: 150px;
}

/* ---------------------------------- Where To Find Us */
#find-us {
    height: 1230px;
    width: 100%;
    background: url('../images/locations-background-img.jpg') no-repeat center center;
    background-size: cover;
    background-attachment: fixed;
    z-index: -1;
    display: flex;
}

#find-us h1 {
    margin: 40px 0;
}

#google-map {
    width: 80%;
    height: 275px;
    margin: 0 70px;
    margin-bottom: 30px;
}

#locations {
    width: 60%;
    height: 1130px;
    position: absolute;
    left: 80px;
    background-color: rgba(0, 0, 0, .8);
    border-radius: 5%;
    border: 1px solid #000;
    margin-top: 50px;
    color: #ffffff;
}

#locations a {
    font-family: Comfortaa, sans-serif;
    font-size: 23px;
    border-bottom: 1px solid #c11734;
    width: 100%;
    padding-left: 30px;
}

#locations p {
    font-family: Comfortaa, sans-serif;
    font-size: 15px;
    padding-left: 30px;
    padding-top: 5px;
}

.location {
    width: 100%;
    height: 40px;
    text-align: left;
    margin: 20px 0;
}

/* ---------------------------------- Recipes (index.html) */
#recipes {
    height: 900px;
}

.recipes-p {
    height: 850px;
    width: 70%;
    background-color: rgba(0, 0, 0, .7);
    border: 1px solid #000;
    margin: 50px 0;
    border-radius: 5%;
    margin: 0 auto;
    margin-top: 50px;
    margin-bottom: 50px;
    position: relative;
}

.recipes-p p {
    color: #ffffff;
    font-family: Comfortaa, sans-serif;
    font-size: 18px;
    margin: 30px;
}

.carousel,
.thumbnail {
    height: 230px;
    width: 350px;
    position: absolute;
    overflow: hidden;
    border: 1px solid #c11734;
}

.thumbnail {
    background-color: rgba(0, 0, 0, 0);
}

.thumbnail:hover {
    background-color: rgba(0, 0, 0, .3)
}

.thumbnail p {
    font-size: 22px;
    margin-top: 200px;
    margin-left: 10px;
}

#steak-carousel,
#steak-thumbnail {
    right: 60px;
    margin-top: 30px;
}

#stirfry-carousel,
#stirfry-thumbnail {
    right: 60px;
    bottom: 60px;
}

#bol-carousel,
#bol-thumbnail {
    left: 60px;
    bottom: 60px;
}

#mullet-carousel,
#mullet-thumbnail {
    left: 60px;
    margin-top: 30px;
}

/* ---------------------------------- Recipes (recipe pages) */
.recipe-hero {
    height: 1250px;
}

#recipe-container {
    width: 70%;
    height: 1150px;
    margin: 0 auto;
    margin-top: 50px;
    background-color: rgba(0, 0, 0, .7);
    border-radius: 5%;
    color: #ffffff;
    font-family: Comfortaa, sans-serif;
    position: relative;
}

#recipe-container h1, h3 {
    font-family: Lobster, sans-serif;
}

.recipe-info {
    margin: 50px;
}

.ingredients, .steps {
    text-align: left;
    margin: 0 50px 50px 50px;
}

#recipe-container li {
    padding-bottom: 12px;
}

#recipe-carousel {
    position: absolute;
    right: 50px;
    top: 150px;
    height: 265px;
    width: 400px;
}

/* ---------------------------------- Reviews */
#reviews {
    height: 950px;
    width: 100%;
    background: url('../images/reviews-bg.jpg') no-repeat center center;
    background-attachment: fixed;
    background-size: cover;
    z-index: -1;
    padding-top: 50px;
}

.reviews-container {
    width: 70%;
    height: 850px;
    margin: 0 auto;
    background-color: rgba(0, 0, 0, .8);
    border-radius: 5%;
}

.reviews-container h1 {
    padding-top: 20px;
    margin-top: 0;
}

.reviews-container p {
    font-family: Comfortaa, sans-serif;
    font-size: 20px;
    color: #ffffff;
}

.reviews-p {
    text-align: center;
    margin-bottom: 50px;
}

.review-quotes {
    text-align: left;
    margin: 60px 20px 0 20px;
}

.quote-name {
    text-align: left;
    margin: 0;
    padding: 10px 0 0 20px;
}

/* ---------------------------------- Contact Us */
#contact-us {
    height: 1000px;
    width: 100%;
}

